RESOLVED FIXED206437
REGRESSION: ( r254256 ) [ Mojave wk2 ] http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable-gpuprocess.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=206437
Summary REGRESSION: ( r254256 ) [ Mojave wk2 ] http/wpt/mediarecorder/MediaRecorder-A...
Truitt Savell
Reported 2020-01-17 13:15:04 PST
http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable-gpuprocess.html Description: This test has been failing sense its introduction in https://trac.webkit.org/changeset/254256/webkit History: https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fmediarecorder%2FMediaRecorder-AV-audio-video-dataavailable-gpuprocess.html Diff: --- /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable-gpuprocess-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable-gpuprocess-actual.txt @@ -1,4 +1,4 @@ -PASS Verify MediaRecorder is working in GPUProcess +FAIL Verify MediaRecorder is working in GPUProcess assert_true: the blob should contain some buffers expected true got false
Attachments
Patch (4.97 KB, patch)
2020-01-20 02:51 PST, youenn fablet
no flags
Patch for landing (4.97 KB, patch)
2020-01-20 06:13 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2020-01-17 13:16:00 PST
youenn fablet
Comment 2 2020-01-20 02:20:16 PST
Cannot reproduce currently. One hypothesis is that we call stopRecording which after sometime and hopping through threads will set m_isStopped and m_hasStartedWriting to false. Any further call to fetchData will then fail. This might happen with GPUProcess since the stopRecording and fetchData calls are two IPC messages.
youenn fablet
Comment 3 2020-01-20 02:51:20 PST
Eric Carlson
Comment 4 2020-01-20 05:58:32 PST
Comment on attachment 388222 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=388222&action=review > Source/WebCore/ChangeLog:10 > + If too much time happened betweent he two call,s stopRecording will trigger setting m_isStopped and m_hasStartedWriting to false. s/call,s/calls/
youenn fablet
Comment 5 2020-01-20 06:13:17 PST
Created attachment 388234 [details] Patch for landing
WebKit Commit Bot
Comment 6 2020-01-20 07:07:45 PST
Comment on attachment 388234 [details] Patch for landing Clearing flags on attachment: 388234 Committed r254823: <https://trac.webkit.org/changeset/254823>
WebKit Commit Bot
Comment 7 2020-01-20 07:07:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.